tests/ui/from_iterator/from_iterator_multifield_attr_struct.rs
use derive_more_more::FromIterator;

#[derive(Default, FromIterator)]
#[from_iterator(usize)]
struct Named {
    inner: Vec<usize>,
    test: bool,
}

#[derive(Default, FromIterator)]
#[from_iterator(usize)]
struct Unnamed(Vec<usize>, bool);

fn main() {}
